tooling/nargo_cli/tests/snapshots/execution_failure/unvalidated_input/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: unvalidated entry point input `w`
   ┌─ src/main.nr:28:9
   │
28 │ fn main(w: Wrapper) {
   │         - `Wrapper` does not implement `Validate`
   │
   = Implement or derive `Validate` for this type so its representation invariants are checked when it enters the circuit from an untrusted source, or silence this warning.

error: value out of range
   ┌─ src/main.nr:20:16
   │
20 │         assert(self.value <= 100, "value out of range");
   │                ----------------- Assertion failed
   │
   = Call stack:
     1: ?
             at src/main.nr:28:6
     2: main
             at src/main.nr:29:7
     3: #[validate]
             at src/main.nr:13:14

Error interpreting main function
